--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # Local .terraform directories
 **/.terraform/*
 
+**/.terraform.lock.hcl
+
 # .tfstate files
 *.tfstate
 *.tfstate.*
@@ -32,3 +34,5 @@ override.tf.json
 # Ignore CLI configuration files
 .terraformrc
 terraform.rc
+
+.DS_Store
